--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
-    "builds": [
-      {
-        "src": "wiki/wsgi.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "wiki/wsgi.py"
-      }
-    ]
+  "builds": [
+    {
+      "src": "vercel_app/wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "vercel_app/wsgi.py"
+    }
+  ]
 }
